--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/Theme.Androidkotlin"
         tools:targetApi="31">
         <activity
-            android:name=".TaskActivity"
+            android:name=".MotivationActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Androidkotlin">
